--- a/personal-budget/src/app/contact/contact.component.html
+++ b/personal-budget/src/app/contact/contact.component.html
@@ -1,1 +1,7 @@
-<h2>contact works!</h2>
+<div class="contact">
+  <h2>Contact Us</h2>
+  <p>If you have any questions or feedback, please feel free to reach out to us:</p>
+  <ul>
+    <li>Email: acheedu@uncc.edu</li>
+  </ul>
+</div>
